// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 {
  fill: #d9dadd;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 {
  background: none;
  fill: #8c40ef;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="radio"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-4 emotion-5 uv_17da2jl3"
                    data-checked="false"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      class="uv_17da2jl6"
                      id="«r2»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 1"
                    />
                    <svg
                      class="uv_17da2jl7"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_17da2jl0"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_17da2jl8"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                      for="«r2»"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="radio"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-4 emotion-5 uv_17da2jl3"
                    data-checked="false"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      class="uv_17da2jl6"
                      id="«r6»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 2"
                    />
                    <svg
                      class="uv_17da2jl7"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_17da2jl0"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_17da2jl8"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                      for="«r6»"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 input+svg {
  display: none;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="checked"
                data-type="checkbox"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5 emotion-6"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-checked="true"
                    aria-invalid="false"
                    checked=""
                    class="emotion-7 emotion-8"
                    id="«rg»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="checked"
                  />
                  <svg
                    class="emotion-9 emotion-10"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="emotion-11 emotion-12"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                    style="--uv_4k0ekn3: 1;"
                  >
                    <div
                      class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                      style="--uv_4k0ekn3: 1;"
                    >
                      <label
                        class="emotion-13 emotion-14 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                        for="«rg»"
                      >
                        Checkbox 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 {
  fill: #d9dadd;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 {
  background: none;
  fill: #8c40ef;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="checked"
                data-type="radio"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-4 emotion-5 uv_17da2jl3"
                    data-checked="true"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      checked=""
                      class="uv_17da2jl6"
                      id="«rb»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="checked"
                    />
                    <svg
                      class="uv_17da2jl7"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_17da2jl0"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_17da2jl8"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                      for="«rb»"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 input+svg {
  display: none;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="checkbox"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5 emotion-6"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="emotion-7 emotion-8"
                    id="«rl»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 1"
                  />
                  <svg
                    class="emotion-9 emotion-10"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="emotion-11 emotion-12"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                    style="--uv_4k0ekn3: 1;"
                  >
                    <div
                      class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                      style="--uv_4k0ekn3: 1;"
                    >
                      <label
                        class="emotion-13 emotion-14 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                        for="«rl»"
                      >
                        Radio 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="checkbox"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5 emotion-6"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="emotion-7 emotion-8"
                    id="«rp»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 2"
                  />
                  <svg
                    class="emotion-9 emotion-10"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="emotion-11 emotion-12"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                    style="--uv_4k0ekn3: 1;"
                  >
                    <div
                      class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                      style="--uv_4k0ekn3: 1;"
                    >
                      <label
                        class="emotion-13 emotion-14 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                        for="«rp»"
                      >
                        Radio 2
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
